# proxel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
proxel/: __init__.py
proxel/encoders/: __init__.py
proxel/parsers/: __init__.py  cif.py  pdb.py
proxel/structure/: __init__.py
proxel/transforms/: __init__.py
scripts/: __init__.py  proxel_test.py
