[project]
version = "0.0.1"
name = "proxel"
requires-python = ">=3.10"
dependencies = []

# [project.urls]
# "Homepage" = "https://github.com/jbwdn/proxel"

[project.optional-dependencies]
dev = ["black", "mypy", "pylint", "pytest", "pre-commit"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
proxel-test = "scripts.proxel_test:main"

[tool.setuptools.packages]
find = {}

[tool.mypy]
ignore_missing_imports = true

[tool.black]
target-version = ["py310"]
